# agage-archive

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.txt  ZIPFILE_README.txt  notes.md  pyproject.toml  requirements.txt  workflow.md
.dvc/: config
agage_archive/: __init__.py  config.py  config.yaml  convert.py  data_selection.py  definitions.py  formatting.py  io.py  io_other_formats.py  processing.py  run.py  util.py  visualise.py  widgets.py
data/: ale_gage_sites.json  ale_gage_species.json  attributes.json  data_selector.json  scale_convert.csv  scale_defaults.csv  standard_names.json  variables.json  variables_not_public.json
data/agage/: .gitignore  CHANGELOG.md  README.md  ZIPFILE_README.txt  agage-data_README.md  agage-public-archive.zip.dvc  ale_gage_sites.json  ale_gage_timestamp_issues.json  attributes.json  attributes_site_species_instrument.json  data-gcms-nc.zip.dvc  data-nc.zip.dvc  data_combination.xlsx  data_exclude.xlsx  data_release_schedule.xlsx  gcms-magnum_species.json  scale_defaults-LGR.csv  scale_defaults-Picarro.csv  scale_defaults.csv
data/agage_test/: README.txt  ale_gage_sites.json  attributes.json  attributes_site.json  data_combination.xlsx  data_exclude.xlsx  (+2 more)
docs/: flasks.md  gcms-magnum-ads_notes.md  optical_data_notes.md  workflow.md
notebooks/: main_functions_tutorial.ipynb  test.ipynb  testing.ipynb  tutorial.ipynb  visualise.ipynb  wang_compare.ipynb
tests/: test_config.py  test_convert.py  test_data_selection.py  test_definitions.py  test_formatting.py  test_io.py  test_processing.py  test_util.py
(+58 files in other folders)
