[project]
name = "agage_archive"
version = "0.1"
description = "AGAGE archive code"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}

[project.urls]
"Homepage" = "https://github.com/mrghg/agage-archive"
"Bug Tracker" = "https://github.com/mrghg/agage-archive/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

